change about place website

--- a/Chantrips-สถานที่เที่ยว.html
+++ b/Chantrips-สถานที่เที่ยว.html
@@ -80,7 +80,7 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขา</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ภูเขาที่แนะนำมีทั้งหมด 2 ที่ดังนี้</h3>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <a href="#">1.เขาคิชกูฏ<br>
+            <a href="เขาคิชกูฎ.html">1.เขาคิชกูฏ<br>
             <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
             <p>เป็นสถานที่ประทับของพระสัมมาสัมพุทธเจ้าทรงโปรดพำนักที่สำคัญแห่งหนึ่งในกรุงราชคฤห์ และได้มีเรื่องมหัศจรรย์เกิดขึ้น ณ ที่แห่งนี้</p></a>
         </div>
@@ -147,7 +147,7 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">วัด</h2><h3 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">วัดที่แนะนำมีทั้งหมด 4 ที่ดังนี้</h3>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <a href="#">อาสนวิหารพระนางมารีอาปฏิสนธินิรมล<br>
+            <a href="โบสคริสต์.html">อาสนวิหารพระนางมารีอาปฏิสนธินิรมล<br>
             <h2>วัด</h2>
             <p>อาสนวิหารที่สวยที่สุดในประเทศไทย หลังคาสร้างจากเรื่อ และรูปปั้นพระแม่มารีอา ที่ประดับด้วยเพชรพลอยมากมาย</p></a>
         </div>
