--- a/น้ำตกคลองนารายณ์.html
+++ b/น้ำตกคลองนารายณ์.html
@@ -60,10 +60,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about" class="direction-about" data-aos="fade-right"  data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//น้ำตกคลองนารายณ์+3+3+ตำบล+คลองนารายณ์+อำเภอเมืองจันทบุรี+จันทบุรี+22000/@12.5816298,102.1742381,17.25z/data=!4m8!4m7!1m0!1m5!1m1!1s0x310486d0282ac7c9:0xdf3cb28fdc8a9075!2m2!1d102.176174!2d12.5815049?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปน้ำตกคลองนารายณ์</a>
-        <h2 data-aos="fade-right">ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right">เวลาทำการ : 8:00-16:00</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : 8:00-16:00</h2></div>
     </div>
 </section>
 <!----------Footer----------> 
