--- a/น้ำตกคลองไพบูรณ์.html
+++ b/น้ำตกคลองไพบูรณ์.html
@@ -60,10 +60,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//น้ำตกคลองไพบูลย์+ตำบล+ตะเคียนทอง+อำเภอ+เขาคิชฌกูฏ+จันทบุรี/@12.8884591,102.0802692,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31049f7e415ff433:0xcbd5cfe3d6ef4f96!2m2!1d102.1215546!2d12.8884623?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปน้ำตกคลองไพบูลย์</a>
-        <h2 data-aos="fade-right">ค่าเข้า : 40 บาท(ยังไม่รวมค่านำรถเข้า)/สามารถใช้ตั๋วของน้ำตกกระทิงได้</h2>
-        <h2 data-aos="fade-right">เวลาทำการ : 8:00-18:00</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : 40 บาท(ยังไม่รวมค่านำรถเข้า)/สามารถใช้ตั๋วของน้ำตกกระทิงได้</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : 8:00-18:00</h2></div>
     </div>
 </section>
 <!----------Footer----------> 
