--- a/น้ำตกตรอกนอง.html
+++ b/น้ำตกตรอกนอง.html
@@ -61,10 +61,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//G6VP%2BPR9+น้ำตกตรอกนอง+ตำบล+ตรอกนอง+อำเภอ+ขลุง+จันทบุรี+22110/@12.544279,102.2345167,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x310487ea259dc6df:0x762f13b8da209bd4!2m2!1d102.237097!2d12.544279?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปน้ำตกตรอกนอง</a>
-        <h2 data-aos="fade-right">ค่าเข้า : 40 บาท(ยังไม่รวมค่านำรถเข้า)</h2>
-        <h2 data-aos="fade-right">เวลาทำการ : 8:00-16 :00</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : 40 บาท(ยังไม่รวมค่านำรถเข้า)</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : 8:00-16 :00</h2></div>
     </div>
 </section>
 <!----------Footer----------> 
