--- a/น้ำตกพลิ้ว.html
+++ b/น้ำตกพลิ้ว.html
@@ -53,14 +53,14 @@
             <a href="https://thailandtourismdirectory.go.th/attraction/1672" target="_blank">ที่มาของข้อมูล</a>
         </div>
     </div>
-    <div class="direction">
+    <div class="direction" >
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about" class="direction-about" data-aos="fade-right"  data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//อุทยานแห่งชาติน้ำตกพลิ้ว+41+หมู่ที่+12+ตำบล+พลิ้ว+อำเภอ+แหลมสิงห์+จันทบุรี+22190/@12.5295808,102.1842196,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31048758940a5913:0x3dd883d9875fab06!2m2!1d102.1842196!2d12.5295808?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปน้ำตกพลิ้ว</a>
         <h2>ค่าเข้า : </h2>
-        <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : จันทร์-ศุกร์ เปิด 8:30-16:00<br>
+        <h2 data-aos="fade-right"  data-aos-duration="1000">เวลาทำการ : จันทร์-ศุกร์ เปิด 8:30-16:00<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;วันเสาร์-อาทิตย์ เปิด 8:00-16:30</h2>
         <h2 data-aos="fade-right"  data-aos-duration="1500">เบอร์ติดต่อ : 039434528</h2>
         </div>
