--- a/น้ำตกเขาสอยดาว.html
+++ b/น้ำตกเขาสอยดาว.html
@@ -57,10 +57,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//น้ำตกเขาสอยดาว+ตำบล+ทรายขาว+อำเภอ+สอยดาว+จันทบุรี+22180/@13.0968981,102.1698722,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3104af6f4be18985:0x7595d9fdb2710b2c!2m2!1d102.1724525!2d13.0968981?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปน้ำตกเขาสอยดาว</a>
-        <h2 data-aos="fade-right">ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right">เวลาทำการ : 9:00-15:00</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : 9:00-15:00</h2></div>
     </div>
 </section>
 <!----------Footer----------> 
