--- a/วัดปากน้ำแขมหนู.html
+++ b/วัดปากน้ำแขมหนู.html
@@ -61,10 +61,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//วัดปากน้ำแขมหนู+ทางหลวงชนบท+รย.4036+ตำบล+ตะกาดเง้า+อำเภอท่าใหม่+จันทบุรี/@12.5396229,101.93084,14z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3103789c120ff789:0x16188f067121a4a5!2m2!1d101.9509079!2d12.5415215?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปวัดปากน้ำแขมหนู</a>
-        <h2>ค่าเข้า : ฟรี</h2>
-        <h2>เวลาทำการ : -</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : -</h2></div>
     </div>
 </section>
 <!----------Footer----------> 
