--- a/วัดเขาบรรจบ.html
+++ b/วัดเขาบรรจบ.html
@@ -61,10 +61,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//วัดเขาบรรจบ+ทางหลวงชนบท+ตำบล+ฉมัน+อำเภอ+มะขาม+จันทบุรี/@12.852534,102.1622432,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x310498fa015ae091:0xac893641bc4b66a2!2m2!1d102.2035286!2d12.8525372?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปวัดเขาบรรจบ</a>
-        <h2>ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : -<br></h2>
+        <h2 data-aos="fade-right"  data-aos-duration="500">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right"  data-aos-duration="1000">เวลาทำการ : -<br></h2>
         <h2 data-aos="fade-right"  data-aos-duration="1500">เบอร์ติดต่อ : 039434528</h2>
         </div>
     </div>
