--- a/หาดคุ้งวิมาน.html
+++ b/หาดคุ้งวิมาน.html
@@ -58,11 +58,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//หาดคุ้งวิมาน+ตำบล+สนามไชย+จันทบุรี/@12.5942294,101.8773323,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3103777ac73e116b:0xb6fed192211972f1!2m2!1d101.8795957!2d12.5935798?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปหาดคุ้งวิมาน</a>
-        <h2>ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : -<br></h2>
-        <h2 data-aos="fade-right"  data-aos-duration="1500"><br></h2>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right"  data-aos-duration="1000">เวลาทำการ : -<br></h2>
         </div>
     </div>
 </section>
