--- a/หาดเจ้าหลาว.html
+++ b/หาดเจ้าหลาว.html
@@ -59,15 +59,30 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//หาดเจ้าหลาว+ตำบล+คลองขุด+จันทบุรี+22120/@12.5382566,101.9182429,13.5z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3103827edc399f1f:0xe5ac4b6308dd85a4!2m2!1d101.9404681!2d12.5336889?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปหาดเจ้าหลาว</a>
-        <h2 data-aos="fade-right">ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right">เวลาทำการ : -</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : -</h2></div>
     </div>
 </section>
+<!----------Footer----------> 
+<footer class="footer">
+    <div class="address">
+        <h2>ที่อยู่</h2>
+    </div>
+    <div class="question">
+        <a href="https://forms.gle/wrQuoXFQZxrP2Ntw6" target="_blank">แบบสอบถาม</a>
+    </div>
+    <div class="contact">
+        <h2>Contact Info</h2>
+        <h3>Number : 000 111 2222</h3>
+        <h3>Email : Chantrips@mail.com</h3>
+    </div>
+</footer>
+<!----------AOS--------------->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
-  AOS.init();
+    AOS.init();
 </script>
 </body>
 </html>
