--- a/อ่าวคุ้งกระเบน.html
+++ b/อ่าวคุ้งกระเบน.html
@@ -61,10 +61,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
-        <a href="https://www.google.com/maps/dir//อ่าวคุ้งกระเบน+ซอย+บ้านเนินประดู่+อำเภอท่าใหม่+จันทบุรี/@12.5731261,101.8605692,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x310379c455277873:0x5826d0e80ec91c58!2m2!1d101.9018546!2d12.5731293?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปศูนย์ศึกษาพัฒนาอ่าวคุ้งกระเบน</a>
-        <h2 data-aos="fade-right">ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right">เวลาทำการ : 8:30-16 :30</h2></div>
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
+        <a href="https://www.google.com/maps/dir//อ่าวคุ้งกระเบน+ซอย+บ้านเนินประดู่+อำเภอท่าใหม่+จันทบุรี/@12.5731261,101.8605692,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x310379c455277873:0x5826d0e80ec91c58!2m2!1d101.9018546!2d12.5731293?entry=ttu" target="_blank">เส้นทางไปศูนย์ศึกษาพัฒนาอ่าวคุ้งกระเบน</a>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : 8:30-16 :30</h2></div>
     </div>
 </section>
 <!----------Footer----------> 
