--- a/โบสคริสต์.html
+++ b/โบสคริสต์.html
@@ -14,7 +14,7 @@
 <!----------Menu---------->
 <header id="head">
     <div class="logo">
-        <a href="index.html">
+        <a href="Chantirps-homepage.html">
         <img src="IMG\Logo.webp">
         </a>
     </div>
@@ -23,6 +23,7 @@
         <li><a href="Chantrips-สถานที่เที่ยว.html">สถานที่ท่องเที่ยว</a></li>
         <li><a href="https://forms.gle/wrQuoXFQZxrP2Ntw6" target="_blank">แบบสอบถาม</a></li>
         <li><a href="Chantrips-ความเป็นมาของเว็บไซต์.html">ความเป็นมาของเว็บไซต์</a></li>
+    </ul>
 </header>
 <!--------body----------->
 <section class="body">
@@ -30,37 +31,28 @@
         <marquee behavior="scroll" direction="left" scrollamount="12">ขอความกรุณาตอบแบบสอบถามด้วยนะครับ ขอบพระคุณอย่างยิ่งครับ</marquee>
     </div>
     <div class="topic">
-        <h1 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">หาดแหลมเสด็จ</h1>
+        <h1 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">อาสนวิหารพระนางมารีอาปฏิสนธินิรมล</h1>
     </div>
     <div class="nature-topic">
     <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1500">ลักษณะของสถานที่ท่องเที่ยว</h2>
     </div>
     <div class="nature" data-aos="fade-right"  data-aos-duration="1500">
-        <img src="IMG\หาดแหลมเสด็จ\IMG_1347.webp"><p>หาดแหลมเสด็จ มีลักษณะเป็นเหมือนสันเขื่อนกันคลื่น ในฤดูฝนหรือช่วงที่น้ำขึ้นจะมองไม่เห็นหาดทราย แต่ถ้าช่วงน้ำลงเราจะสามารถมองเห็นหาดทรายได้ มีอาหารและน้ำขายตลอดชายฝั่ง น้ำทะเลหาดแหลมเสด็จจะใสที่สุดช่วงฤดูหนาว</p>
+        <img src=""><p></p>
     </div>
     <div class="gallery">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">แกลอรี่</h2>
         <div class="gallery-img">
-        <img src="IMG\หาดแหลมเสด็จ\IMG_1346.webp"><img src="IMG\หาดแหลมเสด็จ\IMG_1347.webp"><img src="IMG\หาดแหลมเสด็จ\IMG_1353.webp">
-        </div>
-    </div>
-    <div class="history">
-        <div class="history-topic">
-            <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
-        </div>
-        <div class="history-paragraph">
-            <p>ที่มาของชื่อหาด “แหลมเสด็จ” มาจากเมื่อปี พ.ศ.2523 สมเด็จพระนางเจ้าระไพพรรณมณีทรงเสด็จมาปลูกต้นไม้ที่หาดนี้ ชาวบ้านเลยตั้งชื่อว่า “หาดแหลมเสด็จ” เพื่อความเป็นสิริมงคล</p>
-            <a href="https://www.emagtravel.com/archive/lamsadej.html" target="_blank">ที่มาข้อมูล</a>
+        <img src=""><img src=""><img src="">
         </div>
     </div>
     <div class="direction">
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
-        <a href="https://www.google.com/maps/dir//HVCW%2BVCX+สวนรุกขชาติชายหาดแหลมเสด็จ+หาด+แหลม+เสด็จ,+ตำบล+คลองขุด+อำเภอท่าใหม่+จันทบุรี+22120/@12.5722474,101.8957985,21z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31037825e554d769:0x63d65e331e359c77!2m2!1d101.8960962!2d12.5722474?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปหาดแหลมเสด็จ</a>
+        <div class="direction-about" data-aos="fade-right"  data-aos-duration="500">
+        <a href="https://www.google.com/maps/dir//อาสนวิหารพระนางมารีอาปฏิสนธินิรมล+จันทบุรี+ซอย+1+หมู่+10+ตำบล+จันทนิมิต+อำเภอเมืองจันทบุรี+จันทบุรี/@12.58899,102.0108742,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x310481bf86af6945:0xe2274ee05c26d88!2m2!1d102.1185796!2d12.609275?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปอาสนวิหารพระนางมารีอาปฏิสนธินิรมล</a>
         <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right"  data-aos-duration="1000">เวลาทำการ : -<br></h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : วันเสาร์ 9:00-16:00<br></h2>
         </div>
     </div>
 </section>
@@ -74,14 +66,11 @@
     </div>
     <div class="contact">
         <h2>Contact Info</h2>
-        <h3>Number : 000 111 2222</h3>
-        <h3>Email : Chantrips@mail.com</h3>
+        <h3>Email : Chantrips@gmail.com</h3>
     </div>
 </footer>
-<!----------AOS--------------->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
-    AOS.init();
+  AOS.init();
 </script>
 </body>
-</html>
