--- a/จุดชมวิวเนินนางพญา.html
+++ b/จุดชมวิวเนินนางพญา.html
@@ -58,10 +58,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about" data-aos="fade-right"  data-aos-duration="1500">
         <a href="https://www.google.com/maps/dir//จุดชมวิวเนินนางพญา+Chao+Lao+Beach+ตำบล+สนามไชย+อำเภอนายายอาม+จันทบุรี/@12.5913636,101.8397851,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3103777bda592567:0x88572c83cb35a8af!2m2!1d101.8810705!2d12.5913668?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปเนินนางพญา</a>
-        <h2>ค่าเข้า : ฟรี</h2>
-        <h2>เวลาทำการ : -</h2></div>
+        <h2 data-aos="fade-right"  data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : -</h2></div>
     </div>
 </section>
 <!----------Footer----------> 
