--- a/น้ำตกกระทิง.html
+++ b/น้ำตกกระทิง.html
@@ -49,10 +49,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about" class="direction-about" data-aos="fade-right"  data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//น้ำตกกระทิง+ตำบล+พลวง+อำเภอ+เขาคิชฌกูฏ+จันทบุรี/@12.8392228,102.0795806,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31049e5628039597:0x4e5503d88594666e!2m2!1d102.120866!2d12.839226?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปน้ำตกกระทิง</a>
         <h2>ค่าเข้า : 40 บาท(ยังไม่รวมค่านำรถเข้า)/สามารถใช้ตั๋วของน้ำตกคลองไพบูรณ์เข้าได้</h2>
-        <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : 8:00-16:30<br></h2>
+        <h2 data-aos="fade-right"  data-aos-duration="1000">เวลาทำการ : 8:00-16:30<br></h2>
         <h2 data-aos="fade-right"  data-aos-duration="1500">เบอร์ติดต่อ : 039434528</h2>
         </div>
     </div>
