--- a/วัดเขาชวัง.html
+++ b/วัดเขาชวัง.html
@@ -64,10 +64,10 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//W9CH%2B8J6+วัดเขาชวัง+ตำบล+โป่งน้ำร้อน+อำเภอโป่งน้ำร้อน+จันทบุรี+22140/@12.9207781,102.3764468,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3104be584be235d1:0xf9655344380703fe!2m2!1d102.3790859!2d12.9207806?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปวัดเขาชวัง</a>
-        <h2>ค่าเข้า : ฟรี</h2>
-        <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : -<br></h2>
+        <h2 data-aos="fade-right"  data-aos-duration="500">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right"  data-aos-duration="1000">เวลาทำการ : -<br></h2>
         <h2 data-aos="fade-right"  data-aos-duration="1500">เบอร์ติดต่อ : 039434528</h2>
         </div>
     </div>
