--- a/สะพานตากสินมหาราช.html
+++ b/สะพานตากสินมหาราช.html
@@ -61,15 +61,30 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//F3M5%2BHW4+สะพานตากสินมหาราช%E2%80%8B+อำเภอเมืองจันทบุรี+จันทบุรี/@12.4838972,102.0572349,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31038088828f4605:0x90b80cf1f1e12a0a!2m2!1d102.0598152!2d12.4838972?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปสะพานตากสินมหาราช</a>
-        <h2>ค่าเข้า : ฟรี</h2>
-        <h2>เวลาทำการ : -</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : -</h2></div>
     </div>
 </section>
+<!----------Footer----------> 
+<footer class="footer">
+    <div class="address">
+        <h2>ที่อยู่</h2>
+    </div>
+    <div class="question">
+        <a href="https://forms.gle/wrQuoXFQZxrP2Ntw6" target="_blank">แบบสอบถาม</a>
+    </div>
+    <div class="contact">
+        <h2>Contact Info</h2>
+        <h3>Number : 000 111 2222</h3>
+        <h3>Email : Chantrips@mail.com</h3>
+    </div>
+</footer>
+<!----------AOS--------------->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
-  AOS.init();
+    AOS.init();
 </script>
 </body>
 </html>
