--- a/เจดีย์กลางน้ำ.html
+++ b/เจดีย์กลางน้ำ.html
@@ -61,15 +61,30 @@
         <div class="direction-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
-        <div class="direction-about">
+        <div class="direction-about"  class="direction-about" data-aos="fade-right" data-aos-duration="500">
         <a href="https://www.google.com/maps/dir//HVQM%2B4H5+จุดชมวิวเจดีย์กลางน้ำ+บ้านหัวแหลม+ตำบล+สนามไชย+อำเภอนายายอาม+จันทบุรี+22170/@12.5877723,101.8813903,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3103777ed631acc1:0x6656410ea57cdc8a!2m2!1d101.8839706!2d12.5877723?entry=ttu" target="_blank" data-aos="fade-right"  data-aos-duration="1500">เส้นทางไปเจดีย์กลางน้ำ</a>
-        <h2>ค่าเข้า : ฟรี</h2>
-        <h2>เวลาทำการ : -</h2></div>
+        <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500">เวลาทำการ : -</h2></div>
     </div>
 </section>
+<!----------Footer----------> 
+<footer class="footer">
+    <div class="address">
+        <h2>ที่อยู่</h2>
+    </div>
+    <div class="question">
+        <a href="https://forms.gle/wrQuoXFQZxrP2Ntw6" target="_blank">แบบสอบถาม</a>
+    </div>
+    <div class="contact">
+        <h2>Contact Info</h2>
+        <h3>Number : 000 111 2222</h3>
+        <h3>Email : Chantrips@mail.com</h3>
+    </div>
+</footer>
+<!----------AOS--------------->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
-  AOS.init();
+    AOS.init();
 </script>
 </body>
 </html>
