--- a/Chantrips-ความเป็นมาของเว็บไซต์.html
+++ b/Chantrips-ความเป็นมาของเว็บไซต์.html
@@ -28,9 +28,11 @@
 <!-----------Body------------>
     <section class="title">
         <div class="about-website-head">
-            <h1>ความเป็นมาของเว็บไซต์</h1>
-            <p>เว็บนี้สร้างขึ้นเพื่อให้ผู้เยี่ยมชมทุกท่านได้สามารถศึกษาข้อมูลเกี่ยวกับจังหวัดจันทบุรี&nbsp;และหาข้อมูลสถานที่ท่องเที่ยวที่สนใจในจังหวัดจันทบุรี&nbsp;อีกทั้งยังเป็นการโปรโมทสถานที่ท่องเที่ยวจังหวัดจันทบุรีซึ่งจะส่งให้เศรษฐกิจของจังหวัดจันทบุรีดีขึ้น 
-                &nbsp;ตามมาอีกด้วยอีก ทั้งยังเป็นการช่วยส่งเสริมการท่องเที่ยวของจังหวัดจันทบุรีให้ดีขึ้น&nbsp;โดยเว็บนี้จะจัดทำขึ้นโดยนักเรียนระดับชั้นปวช.3/2แผนกคอมพิวเตอร์ธุรกิจMEP วิทยลัยเทคนิคจันทบุรี</p>
+            <h1 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ความเป็นมาของเว็บไซต์</h1>
+            <h2 data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">เว็บไซต์ Chantrips คือเว็บไซต์อะไร?</h2>
+            <p data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;เว็บไซต์ Chantrips คือเว็บไซต์แนะนำสถานที่ท่องเที่ยวในจังหวัดจันทุบรี โดยมีการจัดหมวดหมู่เป็นหมวดหมู่ใหญ่ เพื่อให้ตรงกับความสนใจของผู้เข้าเยี่ยมชม สร้างขึ้นด้วยโปรแกรม Visual Studio Code ประกอบด้วยภาษ HTML และ CSS</p>
+            <h2 data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">วัตถุประสงค์ของเว็บไซต์ Chantrips คืออะไร?</h2>
+            <p data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;เว็บไซต์ Chantrips สร้างขึ้นเพื่อเป็นเว็บไซต์สำหรับแนะนำสถานที่ท่องเที่ยวในจังหวัดจันทบุรี ทำให้ผู้คนได้รู้จักและเข้ามาท่องเที่ยวในจังหวัดจันทบุรีมากขึ้น และเป็นการกระตุ้นเศรษฐกิจในจังหวัดจันทบุรีอีกด้วย</p>
         </div>
     </section>
     <section class="title">
@@ -38,19 +40,22 @@
             <h1>คณะผู้วิจัย</h1>
             </div>
             <div class="people">
-                <div class="people-items">
+                <div class="people-items" data-aos="fade-up" data-aos-duration="1000">
                     <img src="places\creater\IMG_1445.webp">
                     <h3>นายณัฐดนัย สุขกิจ</h3>
+                    <h4>วิทยลัยเทคนิคจันทุบรี</h4>
                     <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออกแบบเว็บไซต์</h2>
                 </div>
-                <div class="people-items">
+                <div class="people-items" data-aos="fade-up" data-aos-duration="1500">
                     <img src="places\creater\IMG_1446.webp">
                     <h3>นายเปรมมิน ทวีสุข</h3>
+                    <h4>วิทยลัยเทคนิคจันทุบรี</h4>
                     <h2>จัดทำข้อมูล,จัดทำเอกสาร,ออกแบบเว็บไซต์</h2>
                 </div>
-                <div class="people-items">
+                <div class="people-items" data-aos="fade-up" data-aos-duration="2000">
                     <img src="places\creater\IMG_1444.webp">
                     <h3>นายพีรพัฒน์ พร้อมพงษา</h3>
+                    <h4>วิทยลัยเทคนิคจันทุบรี</h4>
                     <h2>จัดทำข้อมูล,สร้างเว็บไซต์,ออกแบบเว็บไซต์</h2>
                 </div>
             </div>
