--- a/โบสคริสต์.html
+++ b/โบสคริสต์.html
@@ -37,8 +37,15 @@
     <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1500">ลักษณะของสถานที่ท่องเที่ยว</h2>
     </div>
     <div class="nature" data-aos="fade-right"  data-aos-duration="1500">
-        <img src=""><p></p>
+        <img src=""><p>วิหารติดยอดแหลมบริเวณหอระฆังทั้ง 2 หอ กระจกบนบริเวณด้านข้างเป็นกระจกชิ้นที่นำมาต่อกันเป็นรูปนักบุญ ตัวโบสทำมาจากดินเหนียวผสมทรายและหินอ่อน สีของโบสถ์จะเป็นสีหินอ่อนสีขาวตัดกับดำและสีส้มอ่อน ภายในโบสถ์ประดับด้วยโคมไฟแชนเดอร์เรีย และรูปปั้นแม่พระและพระเย</p>
     </div>
+    <div class="history-topic">
+        <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
+    </div>
+    <div class="history-paragraph">
+        <p>อาสนวิหารนับเป็นวิหารที่อยู่คู่ชุมชนชาวจันทบูรมาช้านาน นับตั้งแต่รัชสมัยสมเด็จพระที่นั่งท้ายสระ วิหารแห่งแรกได้ถูกสร้างขึ้นโดยกลุ่มชาวญวน 130 คน ที่หนีการเบียดเบียนคริสต์ศาสนิกชนในประเทศเวียดนาม เข้ามาตั้งรกรากในปี พ.ศ. 2254 โดยมีบาทหลวงเฮิ้ต โตแลนติโน เป็นผู้ดูแลกลุ่มชาวญวนเหล่านี้ และได้ทำการก่อสร้างวิหารหลังแรกขึ้นในระหว่างปี พ.ศ. 2273-2295 ต่อมาได้เกิดเหตุไม่สงบในหมู่บ้านทำให้คริสตชนบางส่วนเดินทางออกจากหมู่บ้าน ทิ้งวิหารจนเสื่อมโทรม จนมีการสร้างวิหารใหม่เป็นหลังที่ 2 ในปี พ.ศ. 2295 โดยบาทหลวงเดอกัวนา ในสมัยคุณพ่อมัทเทียโดเป็นอธิการโบสถ์ ได้ทำการสร้างวิหารอีกครั้งเป็นหลังที่ 3 โดยได้ทำการย้ายมาตั้งในบริเวณที่ตั้งปัจจุบัน (ฝั่งตะวันออก) ในปี พ.ศ. 2377[4] ในสมัยคุณพ่อรังแฟงเป็นอธิการโบสถ์ได้ทำการสร้างวิหารใหม่เป็นหลังที่ 4 ในปี พ.ศ. 2398 และวิหารหลังปัจจุบันได้ทำการสร้างขึ้นโดยคุณพ่อเปรีกาล โดยได้พิธีเสกศิลาฤกษ์ เมื่อวันที่ 6 มกราคม พ.ศ. 2449</p>
+        <a href="https://th.wikipedia.org/wiki/อาสนวิหารพระนางมารีอาปฏิสนธินิรมล" target="_blank">ที่มาข้อมูล</a>
+    </div> 
     <div class="gallery">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">แกลอรี่</h2>
         <div class="gallery-img">
