--- a/น้ำตกคลองนารายณ์.html
+++ b/น้ำตกคลองนารายณ์.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>น้ำตกคลองนารายณ์ เป็นน้ำตกที่มีต้นน้ำมาจากป่าเขาสระบาป ได้รับการจัดตั้งเป็นอุทยานแห่งชาติเมื่อปี พ.ศ.2518</p>
         </div>
     </div>
