--- a/น้ำตกคลองไพบูรณ์.html
+++ b/น้ำตกคลองไพบูรณ์.html
@@ -51,7 +51,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>น้ำตกคลองไพบูลย์ มีต้นน้ำมาจากเขาคิชฌกูฏ ลักษณะของน้ำตกไม่เหมือนกับน้ำตกโดยทั่วไป ที่ส่วนใหญ่เป็นสายน้ำ ตกลงมาจากหน้าผาสูง สำหรับน้ำตกคลองไพบูลย์ เวลาน้ำมาก น้ำจะไหลหลากเต็มลำน้ำ เหมือนลำคลอง จึงได้ชื่อว่าคลองไพบูลย์</p>
             <a href="https://thailandtourismdirectory.go.th/attraction/81629" target="_blank">ที่มาของข้อมูล</a>
         </div>
