--- a/น้ำตกตรอกนอง.html
+++ b/น้ำตกตรอกนอง.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>คำว่า ตรอกนอง นั้น เรียกเพี้ยนมาจากคำว่า ต๊กนอง  ซึ่งเป็นภาษาชองที่คนพื้นเมืองมีเชื้อสายชอง ใช้เรียกพื้นที่บริเวณนี้ เนื่องจากมีฝนตกชุกมากเป็นพิเศษ เวลามีฝนตกมากและน้ำไหลนองไปทั่วบริเวณ ถึงแม้ว่าหมู่บ้านใกล้เคียงฝนจะหยุดตกแล้ว บริเวณนี้ยังไม่ยอมหยุดตก ชาวชองที่อาศัยอยู่บริเวณนี้จึงเรียกว่า “บ้านต๊กนอง” ต่อมาได้เรียกชื่อเป็นตกนอง และทางราชการได้เปลี่ยนชื่อใหม่ว่า “บ้านตรอกนอง” หรือตำบลตรอกนองในปัจจุบัน</p>
             <a href="http://www.troknong.go.th/history/" target="_blank">ที่มาของข้อมูล</a>
         </div>
