--- a/น้ำตกพลิ้ว.html
+++ b/น้ำตกพลิ้ว.html
@@ -48,7 +48,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>น้ำตกพลิ้ว ตั้งอยู่ในบริเวณที่ทำการอุทยานแห่งชาติ น้ำตกพลิ้วเป็นน้ำตกชั้นเดียวมีสายน้ำ 2 สายไหลมาบรรจบกัน เป็นน้ำตกที่พระมหากษัตริย์ของไทย 3 รัชกาล คือรัชกาลที่ 5 รัชกาลที่ 6 และ รัชกาลที่ 7 ได้เคยเสด็จมาทอดพระเนตรความสวยงาม และได้จารึกพระปรมาภิไชยย่อไว้บนก้อนหินขนาดใหญ่ บริเวณหน้าผาเหนือต้นน้ำตกพลิ้ว</p>
             <a href="https://thailandtourismdirectory.go.th/attraction/1672" target="_blank">ที่มาของข้อมูล</a>
         </div>
