--- a/วัดปากน้ำแขมหนู.html
+++ b/วัดปากน้ำแขมหนู.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>วัดปากน้ำแขมหนูสร้างตั้งแต่ปี พ.ศ.2489 ต่อมาทางวัดได้ก่อสร้างต่อเติมพระอุโบสถครั้งที่ 2 เมื่อ พ.ศ. 2493 และได้ฉลองพระอุโบสถครั้งแรกเมื่อเดือนก.พ. 2502 แต่เนื่องจากโบสอยู่ติดกับทะเล เลยทำให้เกิดการกัดกร่อนและความทรุดโทรมจากน้ำทะเล ทางวัดและชาวบ้านจึงมีมติร่วมสร้างโบสถ์ใหม่ขึ้นในปี พ.ศ. 2534 ซึ่งก็คือโบสถ์สีน้ำเงินหลังปัจจุบัน โดยนำเอารูปแบบพิมพ์เขียวจากวัดสระบาปที่อำเภอเมืองมาเป็นตัวอย่าง</p>
             <a href="https://th.trip.com/moments/detail/chanthaburi-province-120509-15790951?locale=th-TH" target="_blank">ที่มาข้อมูล</a>
         </div> 
