--- a/วัดเขาชวัง.html
+++ b/วัดเขาชวัง.html
@@ -55,7 +55,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>วัดเขาชวังเริ่มสร้างขึ้นเมื่อปี พ.ศ. 2551 โดยพระอาจารย์ หนูทอง หาสจิตโต ได้ทำเรื่องขออนุญาตในปี พ.ศ.2551 และได้รับอนุญาตในปี พ.ศ.2552 ต่อมาปี พ.ศ.2554 ได้สร้างอุโบสถ์ขึ้นไม้แกะสลักขึ้น วัดเขาชวังแห่งนี้เป็นวัดแห่งเดียวในจังหวัดจันทบุรีที่นำไม้เหลือใช้และส่วนหนึ่งทางวัดซื้อมาเช่น ไม้สัก ไม้ตะเคียน ไม้ประดู่ และไม้แดง นำมาสร้างเป็นโบสถ์ไม้แกะสลักทั้งหลังเมื่อปลายปี2553</p>
             <a href="https://th.trip.com/moments/detail/pong-nam-ron-24601-16400679?locale=th-TH" target="_blank">ที่มาของข้อมูล</a>
         </div>
