--- a/วัดเขาบรรจบ.html
+++ b/วัดเขาบรรจบ.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>วัดเขาบรรจบ เป็นวัดที่สร้างโดยหลวงพ่อสมชาย (เจ้าอาวาสวัดเขาสุกิมในอดีต) ร่วมกับชาวบ้านทุ่งเพล ที่ยกที่ดินถวายให้สร้างวัดในปี 2523 ซึ่งหลวงพ่อสมชาย ได้มอบหมายให้หลวงพ่อทองพูล มาเริ่มต้นสร้างวัดแห่งนี้ ซึ่งถือว่าเป็นเจ้าอาวาสรูปแรกของวัดแห่งนี้</p>
             <a href="https://steemit.com/thai/@campingkinteaw/55d1av" target="_blank">ที่มาของข้อมูล</a>
         </div>
