--- a/สะพานตากสินมหาราช.html
+++ b/สะพานตากสินมหาราช.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>สะพานตากสินมหาราช เริ่มต้นก่อสร้างเมื่อวันที่ 20 พฤษภาคม พ.ศ. 2548 และสร้างแล้วเสร็จในปี พ.ศ. 2550 ใช้งบประมาณในการก่อสร้างทั้งสิ้น 179,570,000 บาท เปิดใช้งานอย่างเป็นทางการเมื่อวันที่ 2 พฤษภาคม พ.ศ. 2551</p>
             <a href="https://th.wikipedia.org/wiki/สะพานตากสินมหาราช" target="_blank">ที่มาข้อมูล</a>
         </div>
