--- a/หาดคุ้งวิมาน.html
+++ b/หาดคุ้งวิมาน.html
@@ -49,7 +49,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>ชื่อของหาดคุ้งวิมาน มีที่มาเป็นเรื่องที่เล่ากันว่า สมัยก่อนมีครอบครัวชาวจีน นั่งเรือสำเภาอพยพมาจากจีนแผ่นดินใหญ่โดยหวังจะมาหาพื้นที่ทำกินที่อุดมสมบูรณ์แห่งใหม่ เมื่อมาถึงบริเวณอ่าวไทยได้เกิดพายุทำให้เรือล่ม คลื่นซัดครอบครัวนี้มายังชายหาดแห่งนี้ เมื่อรอดตายได้ขึ้นฝั่งแล้วรู้สึกราวกับได้มาถึงวิมาน จึงให้ชื่อหาดนี้ว่า "คุ้งวิมาน"</p>
             <a href="https://www.ceediz.com/th/travel/chanthaburi/sp/a/หาดคุ้งวิมาน-จันทบุรี.161120/" target="_blank">ที่มาข้อมูล</a>
         </div>
