--- a/หาดเจ้าหลาว.html
+++ b/หาดเจ้าหลาว.html
@@ -50,7 +50,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>มีนิทานพื้นบ้านที่เล่าสืบเนื่องกันมาว่า ชื่อหาดมาจากหลาว ที่ใช้ในการหาปลา แล้วเกิดมาปักอยู่ที่หาดนี้ จึงตั้งชื่อหาดว่า หาดเจ้าหลาว</p>
             <a href="https://naturalsite.onep.go.th/site/detail/268" target="_blank">ที่มาข้อมูล</a>
         </div>
