--- a/หาดแหลมสิงห์.html
+++ b/หาดแหลมสิงห์.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>ที่มาของชื่อ แหลมสิงห์ เกิดจากตำนานสิงโตคู่ที่แหลมสิงห์ ซึ่งมาจากภูเขาลูกหนึ่งชื่อ "เขาแหลมสิงห์" ตั้งอยู่บริเวณปากน้ำจันทบุรี เหตุที่เรียกว่าเขาแหลมสิงห์ เพราะด้านหน้าเขามีหินเป็นแก่งเกาะยื่นล้ำออกไปในทะเล และในบรรดาก้อนหินเหล่านี้ มีอยู่ 2 ก้อนลักษณะคล้ายตัวสิงโต มีหัว มีลำตัว มีหาง มีเท้า และดวงตา</p>
             <a href="https://naturalsite.onep.go.th/site/detail/269" target="_blank">ที่มาข้อมูล</a>
         </div>
