--- a/หาดแหลมเสด็จ.html
+++ b/หาดแหลมเสด็จ.html
@@ -48,7 +48,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>ที่มาของชื่อหาด “แหลมเสด็จ” มาจากเมื่อปี พ.ศ.2523 สมเด็จพระนางเจ้าระไพพรรณมณีทรงเสด็จมาปลูกต้นไม้ที่หาดนี้ ชาวบ้านเลยตั้งชื่อว่า “หาดแหลมเสด็จ” เพื่อความเป็นสิริมงคล</p>
             <a href="https://www.emagtravel.com/archive/lamsadej.html" target="_blank">ที่มาข้อมูล</a>
         </div>
