--- a/อ่าวคุ้งกระเบน.html
+++ b/อ่าวคุ้งกระเบน.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>อ่าวคุ้งก่อตั้งขึ้น ตามพระราชดำริของในหลวงรัชกาลที่ 9 สำหรับหาพื้นที่ที่เหมาะสมจัดทำโครงการพัฒนาด้านอาชีพการประมงและการเกษตรในพื้นที่ชายฝั่งทะเลจันทบุรี เพื่อดำเนินงานด้านการอนุรักษ์ การจัดการทรัพยากรชายฝั่ง ส่งเสริมและพัฒนาอาชีพราษฎรของศูนย์ฯ คุ้งกระเบนแห่งนี้ </p>
             <a href="https://palanla.com/th/domesticLocation/detail/1702" target="_blank">ที่มาข้อมูล</a>
         </div>
