--- a/เจดีย์กลางน้ำ.html
+++ b/เจดีย์กลางน้ำ.html
@@ -52,7 +52,7 @@
         <div class="history-topic">
             <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
         </div>
-        <div class="history-paragraph">
+        <div class="history-paragraph" class="history-paragraph" data-aos="fade-right"  data-aos-duration="1500">
             <p>เจดีย์บ้านหัวแหลมเป็นเจดีย์เก่าแก่ที่มีอายุกว่า 200 ปี สันนิษฐานว่าสร้างขึ้นเพื่อเป็นที่ยึดเหนี่ยวจิตใจของชาวประมง ด้วยการทำประมงสมัยก่อนเป็นอาชีพที่เสี่ยงอันตรายและเพื่อการออกเรือแต่ละครั้งปลอดภัยจึงสร้างเจดีย์ขึ้นมา</p>
             <a href="https://thailandtourismdirectory.go.th/attraction/22179" target="_blank">ที่มาข้อมูล</a>
         </div>
