--- a/Chantrips-สถานที่เที่ยว.html
+++ b/Chantrips-สถานที่เที่ยว.html
@@ -85,8 +85,9 @@
             <p>เป็นสถานที่ประทับของพระสัมมาสัมพุทธเจ้าทรงโปรดพำนักที่สำคัญแห่งหนึ่งในกรุงราชคฤห์ และได้มีเรื่องมหัศจรรย์เกิดขึ้น ณ ที่แห่งนี้</p></a>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <a href="#">2.ผาหมี<br>
-            <h2>ภูเขา,เส้นทางธรรมชาติ</h2></a>
+            <img src="IMG\ผาหินกูบ\1.webp"><a href="ผาหินกูป.html">2.ผาหินกูบ<br>
+            <h2>ภูเขา,เส้นทางธรรมชาติ</h2>
+            <p>เส้นทางธรรมชาติเดินขึ้นภูเขา มีธรรมชาติอันสวยงานให้นักท่องเที่ยวได้ตกตะลึง</p></a>
         </div>
     </div>
     <!--------------Beach/sea---------------->
