--- a/ผาหินกูป.html
+++ b/ผาหินกูป.html
@@ -31,18 +31,21 @@
         <marquee behavior="scroll" direction="left" scrollamount="12">ขอความกรุณาตอบแบบสอบถามด้วยนะครับ ขอบพระคุณอย่างยิ่งครับ</marquee>
     </div>
     <div class="topic">
-        <h1 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ผาหินกูป</h1>
+        <h1 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ผาหินกูบ</h1>
     </div>
     <div class="nature-topic">
     <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1500">ลักษณะของสถานที่ท่องเที่ยว</h2>
     </div>
     <div class="nature" data-aos="fade-right"  data-aos-duration="1500">
-        <img src=""><p></p>
+        <img src="IMG\ผาหินกูบ\1.webp"><p></p>
     </div>
     <div class="gallery">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">แกลอรี่</h2>
         <div class="gallery-img">
-        <img src=""><img src=""><img src="">
+        <img src="IMG\ผาหินกูบ\IMG_2440.webp"><img src="IMG\ผาหินกูบ\IMG_2473.webp"><img src="IMG\ผาหินกูบ\IMG_2475.webp"><img src="IMG\ผาหินกูบ\IMG_2477.webp">
+        </div>
+        <div class="gallery-img">
+            <img src="IMG\ผาหินกูบ\IMG_2528.webp"><img src="IMG\ผาหินกูบ\IMG_2638.webp"><img src="IMG\ผาหินกูบ\1.webp">
         </div>
     </div>
     <div class="direction">
@@ -50,7 +53,7 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เกี่ยวกับสถานที่</h2>
         </div>
         <div class="direction-about" data-aos="fade-right" data-aos-duration="500">
-        <a href="" target="_blank">เส้นทางไปเขาคิชกูฏ</a>
+        <a href="https://www.google.com/maps/dir//V5QX%2BGFH+ผาหินกูบ+ตำบล+ตะเคียนทอง+อำเภอ+เขาคิชฌกูฏ+จันทบุรี+22210/@12.8885834,102.1962194,16.5z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3104a2783741336b:0x59ba343e4da83d9f!2m2!1d102.1987228!2d12.8888045?entry=ttu" target="_blank">เส้นทางไปผาหินกูบ</a>
         <h2 data-aos="fade-right" data-aos-duration="1000">ค่าเข้า : ฟรี</h2>
         <h2 data-aos="fade-right"  data-aos-duration="1500">เวลาทำการ : วันเสาร์ 9:00-16:00<br></h2>
         </div>
