--- a/ผาหินกูป.html
+++ b/ผาหินกูป.html
@@ -37,7 +37,8 @@
     <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1500">ลักษณะของสถานที่ท่องเที่ยว</h2>
     </div>
     <div class="nature" data-aos="fade-right"  data-aos-duration="1500">
-        <img src="IMG\ผาหินกูบ\1.webp"><p></p>
+        <img src="IMG\ผาหินกูบ\1.webp"><p>เป็นยอดเขาที่เหมือนปฏิมากรรมทางธรรมชาติที่งดงามไม่เหมือนที่ไหน บนยอดเขามีลักษณะเป็นหินแกรนิตขนาดมหึมา รูปทรงโค้งมน ผิวเกลี้ยง วางซ้อนตัวกันตามธรรมชาติ ผาหินกูบ เป็นสถานที่ท่องเที่ยวที่ไม่ค่อยได้ยินชื่อบ่อยนัก เพราะเป็นสถานที่เที่ยวที่ไม่ได้เปิดให้นักท่องเที่ยวทั่วไปได้เข้าชม การขึ้นชมผาหินกูบจะใช้การเดินเท้าเท่านั้น มีการจำกัดจำนวนนักท่องเที่ยวในการขึ้น ไม่สามารถเดินทางขึ้นไปกันเองได้ จะต้องได้รับอนุญาติจากเจ้าหน้าที่จากหน่วยพิทักษ์ป่า และต้องอยู่ภายใต้การดูแลของเจ้าหน้าที่เท่านั้น เพื่อนำทางและดูแลความปลอดภัย หากมากันเป็นกลุ่มใหญ่ ควรจ้างลูกหาบช่วยนำสัมภาระในการทำอาหารไปด้วย มีระยะทางประมาณ5-6กิโลเมตร ใช้เวลาเดินทางประมาณ5-6ชั่วโมง<br>
+        <a href="https://www.ceediz.com/th/travel/chanthaburi/sp/a/ผาหินกูบ-จันทบุรี.161169/" target="_blank">ที่มาข้อมูล</a></p>
     </div>
     <div class="gallery">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">แกลอรี่</h2>
