--- a/เขาคิชกูฎ.html
+++ b/เขาคิชกูฎ.html
@@ -31,18 +31,23 @@
         <marquee behavior="scroll" direction="left" scrollamount="12">ขอความกรุณาตอบแบบสอบถามด้วยนะครับ ขอบพระคุณอย่างยิ่งครับ</marquee>
     </div>
     <div class="topic">
-        <h1 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เขาคิชกูฏ</h1>
+        <h1 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">เขาคิชฌกูฏ</h1>
     </div>
     <div class="nature-topic">
     <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1500">ลักษณะของสถานที่ท่องเที่ยว</h2>
     </div>
     <div class="nature" data-aos="fade-right"  data-aos-duration="1500">
-        <img src=""><p></p>
+        <img src="IMG\เขาคิชฌกูฏ\5.webp"><p>บนเขาพระบาทมีหินก้อนใหญ่ลักษณะกลมเกลี้ยงกระจายอยู่ทั่วไป โดยเฉพาะบริเวณรอยพระพุทธบาทมีหินก้อนใหญ่มาก สามารถมองเห็นได้จากพื้นราบนอกเขตอุทยานแห่งชาติ<br>
+                                                        <a href="https://www.facebook.com/UnseenThailand/posts/3830522230293494/?locale=hi_IN" target="_blank">ที่มาของรูปภาพ</a></p>
     </div>
     <div class="gallery">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">แกลอรี่</h2>
         <div class="gallery-img">
-        <img src=""><img src=""><img src="">
+        <img src="IMG\เขาคิชฌกูฏ\5.webp"><img src="IMG\เขาคิชฌกูฏ\1.webp"><img src="IMG\เขาคิชฌกูฏ\2.webp"><img src="IMG\เขาคิชฌกูฏ\3.webp">
+        </div>
+        <div class="gallery-img">
+            <img src="IMG\เขาคิชฌกูฏ\5.webp"><br>
+            <a href="https://th.trip.com/blog/how-to-go-khao-khichakut-chantaburi/" target="_blank">ที่มารูปภาพ</a>
         </div>
     </div>
     <div class="direction">
