--- a/Chantrips-temples.html
+++ b/Chantrips-temples.html
@@ -43,7 +43,7 @@
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">วัด</h2><h3>วัดที่แนะนำมีทั้งหมด 4 ที่ดังนี้</h3>
         </div>
         <div class="location" data-aos="fade-right"  data-aos-duration="1500">
-            <a href="#">อาสนวิหารพระนางมารีอาปฏิสนธินิรมล<br>
+            <img src="IMG\อาสนวิหารพระแม่มารีอา\IMG_1121.webp"><a href="โบสคริสต์.html">อาสนวิหารพระนางมารีอาปฏิสนธินิรมล<br>
             <h2>วัด</h2>
             <p>อาสนวิหารที่สวยที่สุดในประเทศไทย หลังคาสร้างจากเรื่อ และรูปปั้นพระแม่มารีอา ที่ประดับด้วยเพชรพลอยมากมาย</p></a>
         </div>
