--- a/โบสคริสต์.html
+++ b/โบสคริสต์.html
@@ -37,7 +37,7 @@
     <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1500">ลักษณะของสถานที่ท่องเที่ยว</h2>
     </div>
     <div class="nature" data-aos="fade-right"  data-aos-duration="1500">
-        <img src=""><p>วิหารติดยอดแหลมบริเวณหอระฆังทั้ง 2 หอ กระจกบนบริเวณด้านข้างเป็นกระจกชิ้นที่นำมาต่อกันเป็นรูปนักบุญ ตัวโบสทำมาจากดินเหนียวผสมทรายและหินอ่อน สีของโบสถ์จะเป็นสีหินอ่อนสีขาวตัดกับดำและสีส้มอ่อน ภายในโบสถ์ประดับด้วยโคมไฟแชนเดอร์เรีย และรูปปั้นแม่พระและพระเยซู</p>
+        <img src="IMG\อาสนวิหารพระแม่มารีอา\IMG_1121.webp"><p>วิหารติดยอดแหลมบริเวณหอระฆังทั้ง 2 หอ กระจกบนบริเวณด้านข้างเป็นกระจกชิ้นที่นำมาต่อกันเป็นรูปนักบุญ ตัวโบสทำมาจากดินเหนียวผสมทรายและหินอ่อน สีของโบสถ์จะเป็นสีหินอ่อนสีขาวตัดกับดำและสีส้มอ่อน ภายในโบสถ์ประดับด้วยโคมไฟแชนเดอร์เรีย และรูปปั้นแม่พระและพระเยซู</p>
     </div>
     <div class="history-topic">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">ประวัติความเป็นมาของสถานที่</h2>
@@ -49,7 +49,10 @@
     <div class="gallery">
         <h2 data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">แกลอรี่</h2>
         <div class="gallery-img">
-        <img src=""><img src=""><img src="">
+        <img src="IMG\อาสนวิหารพระแม่มารีอา\1.webp"><img src="IMG\อาสนวิหารพระแม่มารีอา\2.webp"><img src="IMG\อาสนวิหารพระแม่มารีอา\IMG_1121.webp"><img src="IMG\อาสนวิหารพระแม่มารีอา\IMG_1536.webp">
+        </div>
+        <div class="gallery-img">
+            <img src="IMG\อาสนวิหารพระแม่มารีอา\IMG_1537.webp">
         </div>
     </div>
     <div class="direction">
