เพิ่มที่มารูปภาพโบส

--- a/โบสคริสต์.html
+++ b/โบสคริสต์.html
@@ -53,6 +53,7 @@
         </div>
         <div class="gallery-img">
             <img src="IMG\อาสนวิหารพระแม่มารีอา\IMG_1537.webp">
+            <a href="https://chanmunic.go.th/สถานที่ท่องเที่ยว-2/อาสนวิหารพระนางมารีอาป/">ที่มารูปภาพ</a>
         </div>
     </div>
     <div class="direction">
